--- a/Partie 2/Partie 2.cbp
+++ b/Partie 2/Partie 2.cbp
@@ -37,6 +37,7 @@
 		<Unit filename="menu.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="menu.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
